Code cleanups: Java11, Sonar, IntelliJ warnings