@@ -1,12 +1,13 @@
 package com.tzachz.commentcounter.server;
 
-import com.google.common.collect.ImmutableMap;
 import com.tzachz.commentcounter.apifacade.EmojisMap;
 import com.tzachz.commentcounter.apifacade.GitHubApiFacade;
 import org.junit.Before;
 import org.junit.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+
+import java.util.Map;
 
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
@@ -16,7 +17,7 @@ import static org.mockito.MockitoAnnotations.initMocks;
 
 public class EmojiStoreTest {
 
-    public static final EmojisMap EMOJIS_MAP = new EmojisMap(ImmutableMap.of(":emoji:", "http://link"));
+    public static final EmojisMap EMOJIS_MAP = new EmojisMap(Map.of(":emoji:", "http://link"));
 
     @Mock
     private GitHubApiFacade apiFacade;
